# warp2relion-tomo

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
test_data/: TS_001_ctffind4_output.txt  TS_001_ctfplotter_output.txt  TS_02.mrc.tlt  TS_02.mrc.xml  newst.com  tilt.com
tests/: test_utils.py  test_xml_handling.py
warp2relion-tomo/: parse_warp_xml.py  utils.py
warp2reliontomo/: __init__.py  generate_ctffind_output.py  parse_warp_xml.py  utils.py
