[metadata]
name = warp2reliontomo
author = Tom Dendooven
author_email = tdendooven@mrc-lmb.cam.ac.uk
description = interface Warp tomography preprocessing with RELION-4.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Dendooventom/warp2relion-tomo
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = warp2reliontomo
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm


[options.packages.find]
where = warp2reliontomo

[options.entry_points]
console_scripts =
    warpxml2ctffind = generate_ctffind_output:cli

